styles.css
body {
    font-family: sans-serif;
    font-size: 1rem;
    height: 100vh;

    padding: 10px;
}

p, h1, input {
    margin: 0;
    padding: 0;
}

h1 {
    text-align: center;
}

input {
    border: none;
}

textarea,
#team-name,
#date,
#field,
#opponent,
#start-time,
#end-time {
    width: 100%;
}

label[for=notes] {
    display: block;
    margin-bottom: 3px;
}

/* Game Info Grid */
#game-info-container {
    display: grid;
    grid-template-rows: repeat(3, min-content);
    grid-template-columns: 1fr 1fr repeat(2, min-content) 1fr;

    margin: 5px 0;
}

#game-info-container label {
    min-width: max-content;
    margin-right: 3px;
}

#date-container,
#start-time-container {
    grid-column: 5;
}

#team-name-container {
    grid-column: span 2;
}

#opponent-container {
    grid-column: span 3;
}

#game-info-container>div {
    display: flex;
}

#gender-rules {
    grid-row: 3;
    grid-column: 1 / -2;
    font-size: .8rem;
    align-self: end;
    font-weight: 700;
}

/* Scorecard */
#score-container {
    display: grid;
    grid-template-columns: max-content max-content max-content max-content max-content 4fr;
    grid-template-rows: min-content 5fr max-content;
}

#empty {
    border-bottom: 2px solid black;
    border-right: 2px solid black;
}

#gender-col>p,
#player-name-col>p,
#offense-col>p,
#defense-col>p {
    font-size: .8rem;
    font-weight: 700;
    padding: 3px;
    border-top: 2px solid black;
    border-right: 2px solid black;
    border-bottom: 2px solid black;
}

.player-check {
    border-right: 2px solid black;
    border-bottom: 2px solid black;

    text-align: center;
}

#gender-col {
    grid-column: 2;
    grid-row: span 2;

    display: grid;
    grid-template-columns: 52px;
    grid-template-rows: max-content repeat(12, 1fr);
}

input[class=gender] {
    border-right: 2px solid black;
    border-bottom: 2px solid black;
    /* font-size: .8rem; */
    padding-left: 20px;
}

#player-name-col {
    grid-column: 3;
    grid-row: span 2;

    display: grid;
    grid-template-columns: max-content;
    grid-template-rows: max-content repeat(12, 1fr);
}

#offense-col,
#defense-col {
    display: grid;
    grid-template-columns: max-content;
    grid-template-rows: max-content repeat(24, 1fr);
}

input[class=player-name] {
    font-size: .8rem;
    border-bottom: 1px solid black;
    border-right: 2px solid black;
    padding-left: 5px;
}

input[class=player2-name] {
    font-size: .8rem;
    border-bottom: 2px solid black;
    border-right: 2px solid black;
    background-color: lightgrey;
    padding-left: 5px;
}

#offense-col {
    grid-column: 4;
    grid-row: span 2;
}

#defense-col {
    grid-column: 5;
    grid-row: span 2;
}

#linup-order-container {
    grid-column: 1;
    grid-row: 2;

    display: grid;
    grid-template-columns: max-content;
    border-bottom: 0;
    border-left: 2px solid black;
    border-right: 2px solid black;
}

#linup-order-container p {
    font-size: 1rem;
    padding: 5px;
    border-bottom: 2px solid black;
    font-weight: 700;
}

/* .player-container {
    display: grid;
    grid-template-columns: 53px 1fr 51px;
    grid-template-rows: 1fr 1fr;
}

input[class=gender] {
    grid-row: 1 / span 2;
    border-right: 2px solid black;
    border-bottom: 2px solid black;
}

input[class=player-name] {
    grid-column: 2;
    border-bottom: 1px solid black;
    border-right: 2px solid black;
}

input[class=player2-name] {
    grid-column: 2;
    grid-row: 2;
    border-bottom: 2px solid black;
    border-right: 2px solid black;
    background-color: lightgrey;
}

.of-de {
    grid-column: 3;
    grid-row: 1 / span 2;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    border-bottom: 2px solid black;
    border-right: 2px solid black;
} */

#scoresheet-container {
    grid-column: 6;
    grid-row: 2;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: repeat(12, 1fr);
}

.inning {
    border-bottom: 2px solid black;
    border-right: 2px solid black;
}

#inning-container-column {
    grid-column: 6;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
}

#inning-container-column p {
    border-top: 2px solid black;
    border-bottom: 2px solid black;
    border-left: 0;
    border-right: 2px solid black;
    padding: 3px;
    font-size: .8rem;
    font-weight: 700;
}

#inning-container-column p,
#linup-order-container p {
    text-align: center;
}

#runs {
    grid-row: 3;
    grid-column: 1 / span 5;
    padding: 3px;
    justify-self: end;
    border-right: 2px solid black;
    font-size: .8rem;
    font-weight: 700;
}

#total-runs-container {
    grid-column: 3;
}

/* Line Up Rule */

#line-up-rule {
    font-size: .75rem;
}

/* Referee Grid */

#ref-container {
    display: grid;
    grid-template-columns: min-content 3fr 1fr 3fr;
    grid-template-rows: repeat(5, 1fr);
    border: 2px solid black;
    margin: 5px 0;
}

#referees {
    grid-column: 1 / span 2;
}

#referees, 
#initials,
#head-ref,
#first-ref,
#third-ref,
#scorer,
#head-ref-initial,
#first-ref-initial,
#third-ref-initial,
#scorer-initial,
label[for=head-ref],
label[for=first-ref],
label[for=third-ref],
label[for=scorer] {
    border-right: 2px solid black;
}

#ref-team {
    grid-column: 4;
}

#referees,
#ref-team,
#initials,
#team-name,
#date,
#field,
#opponent,
#start-time,
#end-time {
    border-bottom: 2px solid black;
}

label[for=head-ref],
label[for=first-ref],
label[for=third-ref],
label[for=scorer] {
    grid-column: 1;
}

#referees,
#ref-team,
#initials,
label[for=head-ref],
label[for=first-ref],
label[for=third-ref],
label[for=scorer],
#game-info-container>div {
    padding: 3px;
}

#head-ref,
#first-ref,
#third-ref,
#scorer {
    grid-column: 2;
}

#head-ref,
#first-ref,
#third-ref,
#head-ref-initial,
#first-ref-initial,
#third-ref-initial,
#head-ref-team,
#first-ref-team,
#third-ref-team,
label[for=head-ref],
label[for=first-ref],
label[for=third-ref] {
    border-bottom: 1px solid black;
}

#head-ref-initial,
#first-ref-initial,
#third-ref-initial,
#scorer-initial {
    grid-column: 3;
}

#head-ref-team,
#first-ref-team,
#third-ref-team,
#scorer-team {
    grid-column: 4;
}

#head-ref,
#head-ref-initial,
#head-ref-team {
    grid-row: 2;
}

#first-ref,
#first-ref-initial,
#first-ref-team {
    grid-row: 3;
}

#third-ref,
#third-ref-initial,
#third-ref-team {
    grid-row: 4;
}

#scorer,
#scorer-initial,
#scorer-team {
    grid-row: 5;
}

